--- a/src/localization/translations/en_GB.json
+++ b/src/localization/translations/en_GB.json
@@ -9,6 +9,8 @@
     "BUTTON_SCREEN_HOME_LABEL": "Home button",
     "BUTTON_SCREEN_OBSERVATIONS_LABEL": "Observations button",
     "BUTTON_SCREEN_SETTINGS_LABEL": "Settings button",
+    "BUTTON_OBSERVATION_INFO_LABEL": "Open observation details",
+    "BUTTON_OBSERVATION_MAP_LABEL": "Open map app on the location",
 
     "COVER_IMAGE_NAME": "Cover Image",
     "COVER_IMAGE_DESCRIPTION": "Collared pratincole (Glareola pratincola)",
